<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/message_query"
    android:background="@color/white2">

    <TextView
        android:id="@+id/text_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="45dp"
        android:text="@string/welcome2"
        android:textColor="#616161"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:layout_marginStart="10dp"
        android:hint="@string/prompt_username"
        android:textColor="#27AF08"
        android:textColorHint="#616161"
        app:layout_constraintStart_toEndOf="@+id/text_welcome"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_logout"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="45dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="30dp"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/logout"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/text_username"/>

    <TextView
        android:id="@+id/text_enter_query"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/query"
        android:textColor="#616161"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/text_welcome"
        app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

    <EditText
        android:id="@+id/query"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="35dp"
        android:ems="10"
        android:hint="@string/query2"
        android:autofillHints="@string/query2"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        app:layout_constraintEnd_toStartOf="@+id/button_send"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_enter_query"/>

    <Button
        android:id="@+id/button_send"
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:layout_marginTop="30dp"
        android:text="@string/send"
        app:layout_constraintTop_toBottomOf="@id/button_logout"
        app:layout_constraintStart_toStartOf="@id/button_logout"/>

    <TextView
        android:id="@+id/query_fail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/query_fail"
        android:textColor="#B10606"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@+id/query"
        app:layout_constraintTop_toBottomOf="@+id/query" />

    <LinearLayout
        android:layout_width="330dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="30dp"
        android:layout_height="440dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="45dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/query_fail" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="440dp"
            android:fillViewport="true"
            tools:ignore="UselessParent">

            <HorizontalScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fillViewport="true">

                <TableLayout
                    android:id="@+id/table"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scrollbars="vertical" />
            </HorizontalScrollView>
        </ScrollView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>